implemented my groups page
